[package]
name = "us-state-info-rs"
version = "0.1.1"
authors = ["Calvin Brown <cab025@protonmail.com>"]
edition = "2018"
repository = "https://github.com/calvinbrown085/us-state-info-rs"
description = "A Rust implementation of the 2 letter state abbreviations for the USA"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
